--- a/app.json
+++ b/app.json
@@ -1,10 +1,13 @@
 {
   "expo": {
-    "name": "main_app",
-    "slug": "main_app",
+    "name": "LIVEFIT",
+    "slug": "LIVEFIT",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "contain"
+    }
   }
 }
