--- a/package.json
+++ b/package.json
@@ -9,16 +9,40 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-navigation/material-bottom-tabs": "^6.2.1",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
+    "axios": "^0.27.2",
+    "clarifai": "^2.9.1",
     "expo": "~44.0.2",
+    "expo-app-loading": "~1.3.0",
+    "expo-camera": "^12.1.2",
+    "expo-image-manipulator": "^10.2.1",
+    "expo-image-picker": "^12.0.2",
+    "expo-media-library": "^14.0.1",
+    "expo-permissions": "^13.1.1",
+    "expo-sensors": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-appearance": "~0.3.3",
+    "react-native-circular-progress": "^1.3.7",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-maps": "0.29.4",
+    "react-native-maps-directions": "^1.8.0",
+    "react-native-paper": "^4.12.1",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "private": true
 }
