--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.1.1",
+    "@fortawesome/free-solid-svg-icons": "^6.1.1",
+    "@fortawesome/react-native-fontawesome": "^0.3.0",
+    "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -19,6 +23,7 @@
     "expo-camera": "^12.1.2",
     "expo-image-manipulator": "^10.2.1",
     "expo-image-picker": "^12.0.2",
+    "expo-linear-gradient": "~11.0.3",
     "expo-media-library": "^14.0.1",
     "expo-permissions": "^13.1.1",
     "expo-sensors": "~11.1.0",
@@ -28,11 +33,14 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-appearance": "~0.3.3",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.7",
+    "react-native-circular-progress-indicator": "^4.2.0",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
     "react-native-paper": "^4.12.1",
+    "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
     "react-native-web": "0.17.1"
@@ -41,6 +49,7 @@
     "@babel/core": "^7.12.9",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
+    "react-native-svg-transformer": "^1.0.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.3"
   },
