--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.9",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
@@ -16,11 +17,16 @@
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@types/react-native-svg-charts": "^5.0.12",
+    "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
     "clarifai": "^2.9.1",
+    "cors": "^2.8.5",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-camera": "^12.1.2",
+    "expo-cli": "^5.4.12",
     "expo-image-manipulator": "^10.2.1",
     "expo-image-picker": "^12.0.2",
     "expo-linear-gradient": "~11.0.3",
@@ -29,6 +35,7 @@
     "expo-sensors": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "graphql": "^16.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -43,7 +50,8 @@
     "react-native-progress": "^5.0.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
