--- a/server_sequilize/package.json
+++ b/server_sequilize/package.json
@@ -7,17 +7,19 @@
     "start": "nodemon app.ts"
   },
   "dependencies": {
+    "@types/sequelize": "^4.28.14",
     "apollo-server-express": "^3.9.0",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
-    "mongoose": "^6.4.0"
+    "pg": "^8.7.3",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.21.3"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.6.3",
     "add": "^2.0.6",
     "nodemon": "^2.0.18",
     "ts-node": "^10.8.1",
