--- a/server_sequilize/tsconfig.json
+++ b/server_sequilize/tsconfig.json
@@ -4,6 +4,8 @@
       "esModuleInterop": true,
       "allowSyntheticDefaultImports": true,
       "target": "es6",
+      "allowJs": false,
+      "noEmit": true,
       "noImplicitAny": true,
       "moduleResolution": "node",
       "sourceMap": true,
@@ -19,4 +21,10 @@
         "ES6"
       ],
     },
+    "include": [
+      "src/**/*"
+    ],
+    "exclude": [
+      "node_modules"
+    ]
   }
