updated config file

--- a/server_sequelize/.env
+++ b/server_sequelize/.env
@@ -1,3 +1,7 @@
-PORT = 4000
-SALT_ROUNDS = 10
-DB_PORT = 5432
+PORT=4000
+SALT_ROUNDS=10
+DB_PORT=5432
+DB_PASS=1234
+HOST_NAME=localhost
+DB_NAME=postgres
+DB_USER_NAME=postgres
