--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "expo-image-picker": "^12.0.2",
     "expo-linear-gradient": "~11.0.3",
     "expo-media-library": "^14.0.1",
+    "expo-navigation-bar": "~1.1.1",
     "expo-permissions": "^13.1.1",
     "expo-sensors": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
