--- a/client/package.json
+++ b/client/package.json
@@ -21,8 +21,11 @@
     "@types/react-native-svg-charts": "^5.0.12",
     "@types/react-redux": "^7.1.24",
     "axios": "^0.27.2",
+    "babel-plugin-inline-dotenv": "^1.7.0",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "clarifai": "^2.9.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.1",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-camera": "^12.1.2",
