get-exercise added

--- a/server/package.json
+++ b/server/package.json
@@ -10,14 +10,15 @@
   "dependencies": {
     "@types/sequelize": "^4.28.14",
     "apollo-server-express": "^3.9.0",
+    "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
-    "ts-node": "^10.9.1",
-    "sequelize": "^6.21.3"
+    "sequelize": "^6.21.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
