--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
+    "mongoose": "^6.5.1",
     "pg": "^8.7.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.21.3",
