--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
     "expo-camera": "^12.1.2",
+    "expo-checkbox": "~2.0.0",
     "expo-cli": "^5.4.12",
     "expo-image-manipulator": "^10.2.1",
     "expo-image-picker": "^12.0.2",
