--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
     "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-mapbox-gl/maps": "^8.6.0-beta.0",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/material-bottom-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.10",
@@ -36,6 +37,7 @@
     "expo-image-manipulator": "^10.2.1",
     "expo-image-picker": "^12.0.2",
     "expo-linear-gradient": "~11.0.3",
+    "expo-location": "~14.0.1",
     "expo-media-library": "^14.0.1",
     "expo-navigation-bar": "~1.1.1",
     "expo-permissions": "^13.1.1",
