--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.1",
     "expo": "~44.0.2",
     "expo-app-loading": "~1.3.0",
+    "expo-background-fetch": "~10.1.0",
     "expo-camera": "^12.1.2",
     "expo-checkbox": "~2.0.0",
     "expo-cli": "^5.4.12",
@@ -44,6 +45,7 @@
     "expo-sensors": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-task-manager": "~10.1.0",
     "graphql": "^16.5.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
