--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "expo-camera": "^12.1.2",
     "expo-checkbox": "~2.0.0",
     "expo-cli": "^5.4.12",
+    "expo-dev-client": "~0.8.6",
     "expo-image-manipulator": "^10.2.1",
     "expo-image-picker": "^12.0.2",
     "expo-linear-gradient": "~11.0.3",
