--- a/client/android/settings.gradle
+++ b/client/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'LIVEFIT'
+include ':react-native-background-actions'
+project(':react-native-background-actions').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-background-actions/android')
 
 apply from: new File(["node", "--print", "require.resolve('expo/package.json')"].execute(null, rootDir).text.trim(), "../scripts/autolinking.gradle");
 useExpoModules()
