--- a/client/package.json
+++ b/client/package.json
@@ -53,6 +53,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-appearance": "~0.3.3",
+    "react-native-background-actions": "^2.6.7",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.7",
     "react-native-circular-progress-indicator": "^4.2.0",
