--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,9 @@
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.5.1",
-    "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "ts-node": "^10.9.1",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
