--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.ts"
+    "start": "ts-node app.ts"
   },
   "dependencies": {
     "apollo-server-express": "^3.9.0",
