--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -7,7 +7,7 @@
       "noImplicitAny": false,
       "moduleResolution": "node",
       "sourceMap": true,
-      "outDir": "dist",
+      "outDir": "./dist",
       "types": ["node"],
       "baseUrl": ".",
       "resolveJsonModule": true,
