--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,6 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@apollo/client": "^3.6.9",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
@@ -48,7 +47,7 @@
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
     "expo-task-manager": "~10.1.0",
-    "graphql": "^16.5.0",
+    "graphql": "^16.6.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -57,6 +56,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.3.7",
     "react-native-circular-progress-indicator": "^4.2.0",
+    "react-native-dotenv": "^3.3.1",
     "react-native-gesture-handler": "~2.1.0",
     "react-native-maps": "0.29.4",
     "react-native-maps-directions": "^1.8.0",
