--- a/client/android/app/src/main/AndroidManifest.xml
+++ b/client/android/app/src/main/AndroidManifest.xml
@@ -31,7 +31,7 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="com.aseeralfaisal.LIVEFIT"/>
+        <!-- <data android:scheme="com.aseeralfaisal.LIVEFIT"/> -->
         <data android:scheme="livefit"/>
       </intent-filter>
     </activity>
