--- a/server/package.json
+++ b/server/package.json
@@ -8,13 +8,15 @@
     "start": "node ./dist/app.js"
   },
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "apollo-server-express": "^3.9.0",
     "axios": "^0.27.2",
     "bcrypt": "^5.0.1",
+    "date-fns": "^2.29.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "graphql": "^16.5.0",
-    "mongoose": "^6.5.1",
+    "mongoose": "^6.6.5",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
