--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "start": "node ./dist/app.js"
   },
   "dependencies": {
+    "@apollo/utils.keyvaluecache": "^1.0.1",
     "@types/mongoose": "^5.11.97",
     "apollo-server-express": "^3.9.0",
     "axios": "^0.27.2",
@@ -17,6 +18,7 @@
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.6.5",
+    "redis": "^4.3.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -25,7 +27,6 @@
     "@types/node": "^18.6.3",
     "add": "^2.0.6",
     "nodemon": "^2.0.18",
-    "typescript": "^4.7.4",
     "yarn": "^1.22.19"
   }
 }
