--- a/server/package.json
+++ b/server/package.json
@@ -25,8 +25,6 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
-    "add": "^2.0.6",
-    "nodemon": "^2.0.18",
-    "yarn": "^1.22.19"
+    "add": "^2.0.6"
   }
 }
