--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,6 @@
     "start": "nodemon ./dist/app.js"
   },
   "dependencies": {
-    "@apollo/utils.keyvaluecache": "^1.0.1",
     "@types/mongoose": "^5.11.97",
     "apollo-server-express": "^3.9.0",
     "axios": "^0.27.2",
@@ -18,13 +17,13 @@
     "express": "^4.18.1",
     "graphql": "^16.5.0",
     "mongoose": "^6.6.5",
-    "redis": "^4.3.1",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.6.3",
-    "add": "^2.0.6"
+    "add": "^2.0.6",
+    "nodemon": "^2.0.20"
   }
 }
