--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "expo start --dev-client",
     "android": "expo run:android",
+    "server": "cd.. && cd server && yarn start",
     "ios": "expo run:ios",
     "web": "expo start --web"
   },
